# yatagarasu

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: check.yml
core/: README.md  pyproject.toml
core/tests/: _ygr_round1_e2e_capture.py  test_broadcasts.py  test_receipts.py  test_session_proofs.py  test_y_gr_59_chain_capture.py  ygr_round1_e2e_20260719_capture.jsonl
core/yatagarasu_core/: __init__.py  broadcasts.py  proofs.py  receipts.py  store.py  types.py
docs/design/: 01-core.md  02-cmux-plugin-acceptance-hooks-b.md  02-cmux-plugin-acceptance-hooks.md  02-cmux-plugin.md  03-discord-plugin.md
plugins/agent-bridge/: README.md  pyproject.toml
plugins/agent-bridge/yatagarasu_agent_bridge/: __init__.py
plugins/cmux/: README.md  pyproject.toml
plugins/cmux/tests/: __init__.py  socket_harness.py  test_acceptance_006_010.py  test_event_resident.py  test_harness_profiles.py  test_hook_011_to_014.py  test_injector.py  test_journal.py  test_notifications.py  test_receipt_producer_seam.py  test_runtime.py  test_seam_forged_marker_rejected.py  test_seam_submit_to_receipt.py  test_supervisor.py  test_wire_format_canary.py  test_y_cmux_002.py  test_y_cmux_003.py  test_y_gr_51_broadcast_seam.py
plugins/cmux/yatagarasu_cmux/: __init__.py  __main__.py  event_outbox.py  harness_profiles.py  injector.py  journal.py  marker.py  notifications.py  outcome.py  resident.py  (+8 more)
plugins/discord/: README.md  pyproject.toml
tests/: README.md  conftest.py  harness.py  test_ci_gate_proof.py  test_smoke.py
(+1 files in other folders)
